testsuite/tests/typecheck/should_fail/tcfail014.stderr

tcfail014.hs:5:33: error:
    • Couldn't match expected type ‘t5’ with actual type ‘t5 -> t6’
      ‘t5’ is a rigid type variable bound by
        the inferred type of h :: (t5 -> t6) -> t6
        at tcfail014.hs:5:25-33
    • In the first argument of ‘z’, namely ‘z’
      In the expression: z z
      In an equation for ‘h’: h z = z z
    • Relevant bindings include
        z :: t5 -> t6 (bound at tcfail014.hs:5:27)
        h :: (t5 -> t6) -> t6 (bound at tcfail014.hs:5:25)
